--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^20.1.4"
+    "electron": "^29.1.0"
   },
   "homepage": "https://github.com/mintech-dot/electronjs-auth/blob/master/README.md",
   "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1",
     "express": "^4.18.1",
     "js": "^0.1.0"
   }
